fix: apply final polishes

--- a/docs/tutorials/create-custom-application/security/cloud-infrastructure/adding-user-pool-and-user-pool-domain.mdx
+++ b/docs/tutorials/create-custom-application/security/cloud-infrastructure/adding-user-pool-and-user-pool-domain.mdx
@@ -44,7 +44,7 @@ The code that we cover in this section can also be found in our GitHub [examples
 ## Adding User Pool and User Pool Domain
 
 :::note
-In this section, we'll be performing all of the needed changes within the [`dev`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/05-security/03-cloud-infrastructure/01-adding-user-pool-and-user-pool-domain/pinterest-clone/api/pulumi/dev) stack. Note that you should perform the same changes within the [`prod`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/05-security/03-cloud-infrastructure/01-adding-user-pool-and-user-pool-domain/pinterest-clone/api/pulumi/prod) stack as well.
+In this section, we'll be performing all of the needed cloud infrastructure code changes within the [`dev`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/05-security/03-cloud-infrastructure/01-adding-user-pool-and-user-pool-domain/pinterest-clone/api/pulumi/dev) stack. Note that you should perform the same changes within the [`prod`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/05-security/03-cloud-infrastructure/01-adding-user-pool-and-user-pool-domain/pinterest-clone/api/pulumi/prod) stack as well.
 
 In case you missed it, check out the [`dev` and `prod` Stacks](/docs/tutorials/create-custom-application/security/getting-started#dev-and-prod-stacks) section.
 :::
@@ -185,7 +185,7 @@ export default () => {
 };
 ```
 
-As names suggest, the `cognitoUserPoolId` and `cognitoUserPoolDomain` properties represent the ID and the domain of the deployed User Pool and User Pool Domain, respectively. We've added these values to the stack output simply because we'll later need them within our React application code (more on this soon).
+As names suggest, the `cognitoUserPool.id` and `cognitoUserPool.domain` properties represent the ID and the domain of the deployed User Pool and User Pool Domain, respectively. We've added these values to the stack output simply because we'll later need them within our React application code (more on this soon).
 
 ## Deployment
 
@@ -215,6 +215,6 @@ Ultimately, both approaches will ensure the new cloud infrastructure resources a
 
 ## Final Result
 
-In this section, we've defined and deployed a new User Pool and a User Pool Domain, all within our GraphQL API's cloud infrastructure code. Also, by adding the `cognitoUserPoolId` and `cognitoUserPoolDomain` stack output properties, we've exposed the ID and the domain of the deployed User Pool and User Pool Domain. This will enable us to later retrieve these values within our React application code and connect everything together.
+In this section, we've defined and deployed a new User Pool and a User Pool Domain, all within our GraphQL API's cloud infrastructure code. Also, by adding the `cognitoUserPool.id` and `cognitoUserPool.domain` stack output properties, we've exposed the ID and the domain of the deployed User Pool and User Pool Domain. This will enable us to later retrieve these values within our React application code and connect everything together.
 
 In the next section, we'll still be playing with the cloud infrastructure code, but this time within our React application, where we'll need to define a new [User Pool Client](https://docs.aws.amazon.com/cognito/latest/developerguide/user-pool-settings-client-apps.html).
