--- a/docs/tutorials/create-custom-application/security/getting-started.mdx
+++ b/docs/tutorials/create-custom-application/security/getting-started.mdx
@@ -40,11 +40,11 @@ The code that we cover in this section can also be found in our GitHub [examples
 
 ## Authentication Flow with Amazon Cognito's Hosted UI
 
-As mentioned in the previous section, in order to perform authentication in our application, we first need to have an **authentication flow**. In other words, we need to provide a way for users to sign up and sing in to our application.
+As mentioned in the previous section, in order to perform authentication in our application, we first need to have an **authentication flow**. In other words, we need to provide a way for users to sign up and sign in to our application.
 
 An authentication flow can easily be introduced via [Amazon Cognito](https://aws.amazon.com/cognito/), by creating a new [User Pool](https://docs.aws.amazon.com/cognito/latest/developerguide/getting-started-with-cognito-user-pools.html). With it, we can implement a couple of different authentication flows, but for the purposes of this tutorial, we'll go with the easiest one, and that's [Hosted UI](https://docs.aws.amazon.com/cognito/latest/developerguide/cognito-user-pools-app-integration.html).
 
-With this approach, the authentication flow is completely offloaded to Amazon Cognito. Once a user wishes to sign up or sing in to our application, she/he usually clicks on a button or a link in it, which causes a redirect to the standalone hosted authentication flow. So, as mentioned, the authentication flow is happening completely outside of our application.
+With this approach, the authentication flow is completely offloaded to Amazon Cognito. Once a user wishes to sign up or sign in to our application, she/he usually clicks on a button or a link, which causes a redirect to the standalone hosted authentication flow. So, as mentioned, the authentication flow is happening completely outside of our application.
 
 <CenteredImage
   alt="User Authentication Flow Start"
@@ -53,7 +53,7 @@ With this approach, the authentication flow is completely offloaded to Amazon Co
   src={hostedUi1}
 />
 
-Once completed successfully, the user is redirected back to our application, but this time, authenticated. Which means we should be able to retrieve the currently signed in user within both React application and GraphQL API, ultimately enabling us to safely perform sensitive operations like sensitive GraphQL mutations, maybe even file upload, and more.
+Once completed successfully, the user is redirected back to our application, but this time, authenticated. Which means we should be able to retrieve the currently signed in user within both React application and GraphQL API, ultimately enabling us to securely perform sensitive operations like sensitive GraphQL mutations, maybe even file upload, and more.
 
 <CenteredImage
   alt="User Authentication Flow End"
@@ -92,11 +92,11 @@ The GraphQL API's cloud infrastructure code, located in the [`pinterest-clone/ap
 Check out the [GraphQL API](/docs/how-to-guides/scaffolding/graphql-api#pulumi) scaffold guide for more information on differences between the [`dev`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/05-security/01-introduction/pinterest-clone/api/pulumi/dev) and [`prod`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/05-security/01-introduction/pinterest-clone/api/pulumi/prod) folders.
 :::
 
-The React application's cloud infrastructure doesn't follow this organization, simply because it's not needed. Which means, there, we'll only need to make a change once and that's it.
+The React application's cloud infrastructure code doesn't follow this organization, simply because it's not needed. Which means, there, we'll only need to make a change once and that's it.
 
 ### `webiny.config.ts` Configuration File
 
-It's useful to know that every package in a Webiny project possesses a `webiny.config.ts` configuration file. For example, if we were to open our GraphQL API's [`webiny.config.ts`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/02-getting-started/pinterest-clone/api/code/graphql/webiny.config.ts) file, located in the [`pinterest-clone/api/code/graphql`](pinterest-clone/api/code/graphql) folder, we'd see the following:
+It's useful to know that every package in a Webiny project possesses the `webiny.config.ts` configuration file. For example, if we were to open our GraphQL API's [`webiny.config.ts`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/02-getting-started/pinterest-clone/api/code/graphql/webiny.config.ts) file, located in the [`pinterest-clone/api/code/graphql`](https://github.com/webiny/webiny-examples/tree/master/create-custom-application/05-security/02-getting-started/pinterest-clone/api/code/graphql) folder, we'd see the following:
 
 ```ts title="pinterest-clone/api/code/graphql/webiny.config.ts" {6,7}
 import { buildFunction, watchFunction } from "@webiny/project-utils";
@@ -110,7 +110,7 @@ export default {
 };
 ```
 
-Essentially, the main purpose of this file is to export the needed `watch` and `build` commands, which are then internally utilized by the [`webiny watch`](/docs/how-to-guides/use-watch-command/)  and [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) commands, respectively. As we can see, these can be simple one-liners, but can also include additional custom steps.
+Essentially, the main purpose of this file is to export the needed `watch` and `build` commands, which are then internally utilized by the [`webiny watch`](/docs/how-to-guides/use-watch-command/)  and [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) commands, respectively. As we can see, these can be simple one-liners, but note that we could also expand them with additional custom steps, if need be.
 
 As another example, if we were to open our React application's [`webiny.config.ts`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/02-getting-started/pinterest-clone/app/code/webiny.config.ts) file located in the [`pinterest-clone/app/code`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/02-getting-started/pinterest-clone/app/code) folder, we'd see the following:
 
@@ -192,7 +192,7 @@ return {
 
 It's important to note that the returned object represents something called the **cloud infrastructure stack output** or just **stack output**, which, essentially, enables us to expose multiple values that were created during a deployment process. These may entail unique IDs of deployed cloud infrastructure resources, maybe a URL that points to a specific resource, and basically anything else that we might need.
 
-The stack output can then be retrieved within cloud infrastructure or application code that is part of the same, or an entirely separate, [project application](/docs/key-topics/project-organization/project-applications). For example, if we were to open the React application's [`webiny.config.ts`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/02-getting-started/pinterest-clone/app/code/webiny.config.ts) configuration file, located in the [`pinterest-clone/app/code`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/02-getting-started/pinterest-clone/app/code/webiny.config.ts) folder, we'd see that we're using the [`getStackOutput`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/02-getting-started/pinterest-clone/app/code/webiny.config.ts#L26) function in order to retrieve the URL over which our GraphQL API can be accessed:
+The stack output can then be retrieved within cloud infrastructure or application code that is part of the same, or an entirely separate, [project application](/docs/key-topics/project-organization/project-applications). For example, if we were to open our React application's [`webiny.config.ts`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/02-getting-started/pinterest-clone/app/code/webiny.config.ts) configuration file, located in the [`pinterest-clone/app/code`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/02-getting-started/pinterest-clone/app/code/webiny.config.ts) folder, we'd see that we're using the [`getStackOutput`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/02-getting-started/pinterest-clone/app/code/webiny.config.ts#L26) function in order to retrieve the URL over which our GraphQL API can be accessed:
 
 ```ts title="pinterest-clone/app/code/webiny.config.ts" {3,13-16,24-31,38-45}
 import invariant from "invariant";
