--- a/docs/tutorials/create-custom-application/security/graphql-api/implementing-authentication-and-authorization-checks.mdx
+++ b/docs/tutorials/create-custom-application/security/graphql-api/implementing-authentication-and-authorization-checks.mdx
@@ -341,11 +341,11 @@ mutation DeletePin($id: ID!) {
 
 ## Final Result
 
-By implementing the necessary authentication and authorization checks in the existing GraphQL mutations (in respective resolver functions), we've made our application much more secure than it initially was:
+By implementing the necessary authentication and authorization checks in the existing GraphQL mutations (in their respective resolver functions), we've made our application much more secure than it initially was:
 
 - only signed in users can create pins
 - when a pin is created, it is tied to the signed in user
 - changes to existing pins can only be performed if the signed in user initially created the pin
 - the same rule applies when it comes to deleting pins
 
-In the next section, we'll quickly summarize everything that we've learned in these couple of security-related sections of the Create Custom Application tutorial.
+In the next section, we'll wrap up this section of the tutorial, by doing a small update on the **Pin Details** page and, finally, providing a short summary of everything that we've learned and built so far.
