--- a/docs/tutorials/create-custom-application/security/graphql-api/initial-setup.mdx
+++ b/docs/tutorials/create-custom-application/security/graphql-api/initial-setup.mdx
@@ -195,7 +195,7 @@ The [`SecurityIdentity`](https://github.com/webiny/webiny-js/blob/next/packages/
 
 ## 4. Updating `Context` Interface
 
-The following step is not required, but it's certainly recommended because we'll benefit from improved type-safety and easier use.
+The following step is not required, but it's certainly recommended because we'll benefit from improved type-safety and better developer experience.
 
 If we were to open the [`pinterest-clone/api/code/graphql/src/types.ts`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/05-graphql-api/01-initial-setup/pinterest-clone/api/code/graphql/src/types.ts) file, in it, we'd find the [`Context`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/05-graphql-api/01-initial-setup/pinterest-clone/api/code/graphql/src/types.ts#L13) interface, which we can utilize any time we're actually interacting with the handler's central `context` object. In our case, this would be within our GraphQL resolver functions, but it could also happen in different [`ContextPlugin`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/handler/src/plugins/ContextPlugin.ts#L7), [`GraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/v5.15.0/packages/handler-graphql/src/plugins/GraphQLSchemaPlugin.ts#L10), and other plugins.
 
@@ -324,6 +324,6 @@ export default /* GraphQL */ `
 
 ## Final Result
 
-With all of the above-shown changes in place, the initial setup is complete, which means we're finally ready to start implementing authentication and authorization checks in our GraphQL resolvers.
+With all of the above-shown changes in place, the initial setup is complete, which means we're finally ready to start implementing authentication and authorization checks in our GraphQL resolver function.
 
 Note that the setup is only performed once. After that, the majority of security-related tasks will revolve around implementing proper authentication and authorization checks.
