--- a/docs/tutorials/create-custom-application/security/introduction.mdx
+++ b/docs/tutorials/create-custom-application/security/introduction.mdx
@@ -56,18 +56,20 @@ On the other hand, we have **authorization**, which, in secure environments, alw
 Note that, when talking about **anonymous** users, we're referring to users whose identity is unknown. In other words, users who simply did not sign in to our application.
 :::
 
-In order to implement authentication and authorization, we'll need to make some amends on both GraphQL API and React application sides of our application. But, before we start with any kind of coding, let's quickly outline the plan.
+In order to implement all of these concepts, we'll need to make changes to our application and cloud infrastructure code - both on the GraphQL API and React application side.
+
+Before we start with any kind of coding, let's quickly outline the plan.
 
 ## The Plan
 
-We're going to divide the security section of this tutorial into four parts. Note that while going through these, we'll be shifting back and forth between our GraphQL API and React application, and also between our application and cloud infrastructure code. This is simply because of the natural order in which all of the pieces are connected together.
+We're going to divide this section of the tutorial into four parts. Note that while going through these, we'll be shifting back and forth between our GraphQL API and React application, and also between our application and cloud infrastructure code. Basically, this is because of the natural order in which all of the different pieces are connected together.
 
 ### [Getting Started](/docs/tutorials/create-custom-application/security/getting-started)
 
-In order to get started, we'll outline a couple of base concepts we'll be using in the sections that follow:
+To get started, we'll quickly outline a couple of base concepts we'll be using in the sections that follow:
 
-- give an overview of the authentication flow we'll be integrating into our application - the **Amazon Cognito's Hosted UI**
-- because we'll not only be working with the application, but also with the cloud infrastructure code, we'll dedicate a couple of sentences to its organization, explain what cloud infrastructure stack output is, and more
+- give an overview of the authentication flow we'll be integrating into our application - the Amazon Cognito's Hosted UI
+- because we'll not only be working with our application, but also with our cloud infrastructure code, we'll dedicate a couple of sentences to explain how it's organized, explain what cloud infrastructure stack output is, and more
 
 ### [Cloud Infrastructure](/docs/tutorials/create-custom-application/security/cloud-infrastructure/adding-user-pool-and-user-pool-domain)
 
@@ -75,8 +77,8 @@ This is where we'll start working with our cloud infrastructure code, which will
 
 ### [React Application](/docs/tutorials/create-custom-application/security/react-application/initial-setup)
 
-Once all of the additional cloud infrastructure resources have been deployed, we can start integrating the mentioned Amazon Cognito's Hosted UI into our React application.
+Once all of the needed cloud infrastructure resources have been deployed, we can start integrating the mentioned Amazon Cognito's Hosted UI into our React application.
 
 ### [GraphQL API](/docs/tutorials/create-custom-application/security/graphql-api/initial-setup)
 
-Finally, once our users are able to sign in to our application, we'll complete our application's security layer by implementing authentication and authorization checks on the GraphQL API side, within our resolver functions.
+Finally, once our users are able to sign up and sign in to our application, we'll complete our application's security layer by implementing authentication and authorization checks on the GraphQL API side, within our resolver functions.
