--- a/docs/tutorials/create-custom-application/security/react-application/integrating-hosted-ui-authentication-flow.mdx
+++ b/docs/tutorials/create-custom-application/security/react-application/integrating-hosted-ui-authentication-flow.mdx
@@ -136,7 +136,7 @@ export default Layout;
 
 As we can see, first we're retrieving the currently signed in user via the [`useSecurity`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/04-react-application/02-integrating-hosted-ui-authentication-flow/pinterest-clone/app/code/src/components/Layout.tsx#L16) React hook. Then, if the user was returned, we're rendering the [`Button`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/04-react-application/02-integrating-hosted-ui-authentication-flow/pinterest-clone/app/code/src/components/Layout.tsx#L32) and [`Dropdown`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/04-react-application/02-integrating-hosted-ui-authentication-flow/pinterest-clone/app/code/src/components/Layout.tsx#L39) components, where the latter contains the mentioned **Sign Out** menu item. Naturally, if no user was returned, them we're just rendering the **Sign In** button.
 
-With all of the previous steps were performed correctly, if we were to click on the **Sign In** button, we should be redirected to the Hosted UI authentication flow, which will initially display the **Sign In** form:
+If all of the steps were performed correctly, if we were to click on the **Sign In** button, we should be redirected to the Hosted UI authentication flow, which will initially display the **Sign In** form:
 
 <CenteredImage
   style={{ maxWidth: 750 }}
@@ -166,10 +166,10 @@ Finally, by entering the correct code into the field and submitting the form, th
 
 ## Final Result
 
-With the Hosted UI authentication flow finally integrated, our users can now sign up and sing in to our application!
+With the Hosted UI authentication flow finally integrated, our users can now sign up and sign in to our application!
 
 And, by only showing the **&#10753;** icon button to signed in users, we've restricted the anonymous users from opening the **New Pin** modal dialog and creating new pins.
 
-But, note that without proper authentication and authorization checks implemented on the GraphQL API side, our application can still be considered as not secure. This is because, at the moment, anonymous users are still able to perform sensitive GraphQL mutations, with just a simple GraphQL client. For example, they can still create new pins via the seen `createPin` mutation, or even delete the existing pins created by other users, via the `deletePin` mutation.
+But, note that without proper authentication and authorization checks implemented on the GraphQL API side, our application can still be considered as not secure enough. This is because, at the moment, anonymous users can still perform sensitive GraphQL mutations, with just a simple GraphQL client, pointed to our GraphQL API's public URL. For example, they can still create new pins via the shown [`createPin(data: PinCreateInput!): Pin!`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/04-react-application/02-integrating-hosted-ui-authentication-flow/pinterest-clone/api/code/graphql/src/plugins/scaffolds/pins/typeDefs.ts#L45-L46) mutation, or even delete the existing ones created by other users, via the [`deletePin(id: ID!): Pin!`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/04-react-application/02-integrating-hosted-ui-authentication-flow/pinterest-clone/api/code/graphql/src/plugins/scaffolds/pins/typeDefs.ts#L51-L52) mutation.
 
 So, to make our application even more secure, in the next and final section of this tutorial, we'll implement the necessary authentication and authorization checks on the GraphQL API side.
