--- a/docs/tutorials/create-custom-application/security/cloud-infrastructure/adjusting-webiny-config-ts.mdx
+++ b/docs/tutorials/create-custom-application/security/cloud-infrastructure/adjusting-webiny-config-ts.mdx
@@ -70,11 +70,11 @@ const API_MAP = {
   REACT_APP_GRAPHQL_API_URL: "${apiUrl}/graphql",
   REACT_APP_USER_POOL_REGION: "${region}",
   REACT_APP_USER_POOL_ID: "${cognitoUserPool.id}",
-  REACT_APP_USER_POOL_DOMAIN: "${cognitoUserPool.domain}",
+  REACT_APP_USER_POOL_DOMAIN: "${cognitoUserPool.domain}"
 };
 
 const APP_MAP = {
-  REACT_APP_USER_POOL_WEB_CLIENT_ID: "${cognitoUserPoolClientId}",
+  REACT_APP_USER_POOL_WEB_CLIENT_ID: "${cognitoUserPool.clientId}"
 };
 
 const NO_ENV_MESSAGE = `Please specify the environment via the "--env" argument, for example: "--env dev".`;
@@ -144,7 +144,7 @@ getStackOutput({
 
 As the name itself suggests, the object represents a map. It is used to instruct the [`getStackOutput`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts#L33) function to map the received stack output properties to new ones. This is useful because, in the [`watch`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts#L29) and [`build`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts#L52) commands, we're assigning stack output properties as environment variables, which must contain the `REACT_APP_` prefix in order for us to be able to access them within the actual React application code.
 
-So, we've added three new properties to the `API_MAP` object: `REACT_APP_USER_POOL_REGION`, `REACT_APP_USER_POOL_ID`, and `REACT_APP_USER_POOL_DOMAIN`, which will represent the `region`, `cognitoUserPoolId`, and `cognitoUserPoolDomain` properties included in the retrieved GraphQL API's stack output.
+So, we've added three new properties to the `API_MAP` object: `REACT_APP_USER_POOL_REGION`, `REACT_APP_USER_POOL_ID`, and `REACT_APP_USER_POOL_DOMAIN`, which will represent the `region`, `cognitoUserPool.id`, and `cognitoUserPool.domain` properties included in the retrieved GraphQL API's stack output.
 
 We also had to add a new [`APP_MAP`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts#L21) map object for the properties that will be retrieved from our React application's stack output. This map is then used with the new [`getStackOutput`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts#L42) function call, which has the `pinterest-clone/app` specified as the project application folder:
 
@@ -170,12 +170,12 @@ Let's say we needed to deploy our React application, in its current state, into 
 
 When doing that, note that the **first** deployment will always need to be done **twice**. This is because of the order in which the React application is built and the User Pool Client is deployed.
 
-Essentially, the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command performs two steps:
+Under the hood, essentially, the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command performs two steps:
 
 1. compile application code and create a production build of our application
 2. based on the cloud infrastructure code, deploy our application and other defined resources
 
-This means that upon deploying our React application for the first time, the [`getStackOutput`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts#L65) function call, that we've added in the [`build`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts#L52) command in our [`webiny.config.js`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts) file, won't return any results. No deployed cloud infrastructure means no stack output to read from.
+This means that upon deploying our React application for the first time, the [`getStackOutput`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts#L65) function call, that we've added within the [`build`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts#L52) command in our [`webiny.config.js`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/03-cloud-infrastructure/03-adjusting-webiny-config-ts/pinterest-clone/app/code/webiny.config.ts) file, won't return any results. No deployed cloud infrastructure means no stack output to read from.
 
 So, when doing the first deployment, we recommend you first deploy your cloud infrastructure resources only, and then proceed by doing another deployment, this time with the application code. We can achieve this with the following command:
 
@@ -192,7 +192,7 @@ yarn webiny deploy pinterest-clone/app --env new-environment
 
 ## Final Result
 
-With all of the new stack output properties now being passed to our React application code as new environment variables, we've now reached a stage in which we can finally begin to implement the Hosted UI authentication flow.
+With all of the new stack output properties now being passed to our React application code as new environment variables, we're now ready to switch to our application code and begin integrating the Hosted UI authentication flow.
 
 ## FAQ
 
