--- a/docs/tutorials/create-custom-application/security/react-application/initial-setup.mdx
+++ b/docs/tutorials/create-custom-application/security/react-application/initial-setup.mdx
@@ -132,7 +132,7 @@ const Authenticator: React.FC = (props) => {
 export default Authenticator;
 ```
 
-Notice how we're also configuring the [`Auth`](https://github.com/aws-amplify/amplify-js/blob/main/packages/auth/src/Auth.ts#L100) class, by passing all of the environment variables that we've defined in the [previous section](/docs/tutorials/create-custom-application/security/cloud-infrastructure/adjusting-webiny-config-ts-configuration-file) of this tutorial. We decided to do this here simply because this way we have all of the relevant code in one place, in a single file.
+Notice how we're also configuring the [`Auth`](https://github.com/aws-amplify/amplify-js/blob/main/packages/auth/src/Auth.ts#L100) class, by passing all of the environment variables that we've defined in the [previous section](/docs/tutorials/create-custom-application/security/cloud-infrastructure/adjusting-webiny-config-ts-configuration-file) of this tutorial. We decided to do this here simply because this way we have all of the relevant code in one place, within a single file.
 
 ## 3. Modify the [`App`](https://github.com/webiny/webiny-examples/blob/master/create-custom-application/05-security/04-react-application/01-initial-setup/pinterest-clone/app/code/src/App.tsx#L15) React component
 
@@ -224,8 +224,6 @@ export default [
 ```
 
 As we can see, on each HTTP request, we're again calling the [`currentSession`](https://github.com/aws-amplify/amplify-js/blob/main/packages/auth/src/Auth.ts#L1420) method of the [`Auth`](https://github.com/aws-amplify/amplify-js/blob/main/packages/auth/src/Auth.ts#L100) class to retrieve the currently signed in user's information, from which we're retrieving her/his ID token (JWT form of it) and assigning it as the value of the `Authorization` header.
-
-With this final step completed, we've completed the initial step and we can move to the Hosted UI authentication flow integration.
 
 ## Final Result
 
