--- a/docs/tutorials/create-custom-application/security/wrapping-it-up.mdx
+++ b/docs/tutorials/create-custom-application/security/wrapping-it-up.mdx
@@ -41,7 +41,7 @@ The code that we cover in this section can also be found in our GitHub [examples
 
 ## Updating the Pin Details Page
 
-With the all of the GraphQL API changes in place, let's wrap up the security section of this tutorial by returning back to our React application and making one small addition to the **Pin Details** page, which currently looks like this:
+With the all of the GraphQL API changes in place, let's wrap up the [Security](/docs/tutorials/create-custom-application/security/introduction) section of the tutorial by returning back to our React application and making one small addition to the **Pin Details** page, which currently looks like this:
 
 <CenteredImage src={pinDetailsCurrent} alt="Current Profile Details Page"/>
 
@@ -127,13 +127,13 @@ And this is how our **Pin Details** page should actually look like (notice the *
 
 <CenteredImage src={pinDetails} alt="Updated Profile Details Page"/>
 
-As we can see, we didn't do anything too complex in terms of the actual visual layout. But, nevertheless, we're now finally able to see who created the particular pin we're looking at.
+As we can see, we didn't do anything too complex in terms of the actual visual layout. But, nevertheless, we're now finally able to see who created the particular pin we're looking at, and that's what we were aiming for.
 
 ## Conclusion
 
 By performing these last couple of changes outlined in the section above, we've completed the [Security](/docs/tutorials/create-custom-application/security/introduction) section of this tutorial!
 
-Via our React application, users can now easily sign up and sign in using the integrated Hosted UI authentication flow. Once successfully completed, they are then able to perform all of the sensitive pins-related actions (GraphQL mutations): create, update, and delete pins. Every created pin is also tied to a signed in user, which also gives us the ability to restrict users from updating or even deleting pins that were initially created by a different user. Overall, we could certainly say that, when it comes to the application security, our application is now in a much better place than it initially was!
+Via our React application, users can now easily sign up and sign in using the integrated Hosted UI authentication flow. Once successfully completed, they are then able to perform all of the sensitive pins-related actions (GraphQL mutations): create, update, and delete pins. Furthermore, upon their creation, the pins will be tied to the signed in user, which also gives us the ability to restrict users from updating or even deleting pins that were initially created by a different user. Overall, we could certainly say that, when it comes to the application security, our application is now in a much better place than it initially was!
 
 Application security is a never-ending topic, so, all of the knowledge we've obtained here will certainly be useful to us as we continue with further development of our application. Speaking of further development, we're now ready to move on to the next section of this tutorial, in which we'll cover one of the most essential features of every modern application, and that's the file upload functionality.
 
