--- a/docs/how-to-guides/deployment/aws/credentials.mdx
+++ b/docs/how-to-guides/deployment/aws/credentials.mdx
@@ -7,9 +7,10 @@ description: Configure AWS credentials.
 ---
 
 :::tip What you’ll learn
+
 - how to configure your AWS credentials for programmatic access
 - how to create a user with fine-grained policies using CloudFormation template
-:::
+  :::
 
 import YouTube from "@components/Youtube";
 
@@ -17,7 +18,7 @@ This article guides you through configuring your AWS credentials for programmati
 
 If you prefer the video version, check out our YouTube video below:
 
-<YouTube id="qmtDRmplMG4"/>
+<YouTube id="qmtDRmplMG4" />
 
 ---
 
@@ -166,35 +167,9 @@ This means that for your `default` profile, that particular region is used. -->
 
 And that's it! You now have your AWS credentials, your default region, and you're ready to deploy Webiny.
 
-## Using a Different AWS Profile Name
-
-If you would like to use a different name for your AWS profile, you can do that too.
-
-But do note that you will need to specify it before executing Webiny deployment-related commands, otherwise the `default` profile will be used.
-
-You can do that via the `AWS_PROFILE` environment variable, which you can set in a couple of ways. The easiest way to do it would be via the `.env` file, located in your project root, for example:
-
-```
-AWS_PROFILE=my-profile
-```
-
-Apart from that, the `AWS_PROFILE` environment variable can also be specified using a terminal of your choice, and a command that's available on your operating system. For example, on Linux or MacOS, you can use the [`export`](https://www.geeksforgeeks.org/export-command-in-linux-with-examples/) command:
-
-```
-export AWS_PROFILE=my-profile
-```
-
-On Windows, you can utilize the [`set`](https://docs.microsoft.com/en-us/windows-server/administration/windows-commands/set_1) and [`setx`](https://docs.microsoft.com/en-us/windows-server/administration/windows-commands/setx) commands, for example:
-
-```
-setx AWS_PROFILE my-profile
-```
-
-:::info
-Read more about profiles and how to set them up in the official [AWS documentation article](https://docs.aws.amazon.com/cli/latest/userguide/cli-configure-profiles.html).
+:::info Using a Different AWS Profile Name?
+If you would like to use a different name for your AWS profile, you can do that too. Check out the [Use AWS Profiles](/docs/how-to-guides/deployment/aws/use-aws-profiles) how-to guide for more information.
 :::
-
-Once the `AWS_PROFILE` has been properly set via one of the shown methods, you can proceed with the deployment of your Webiny project.
 
 ## FAQ
 
